# vk_tg_project_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: alembic.ini  env.py
alembic/versions/: 1f41ad0f9127_create_users_and_states_tables.py
src/: __main__.py  _modules.py  api.py  bot.py  modules.py
src/blueprints/: __init__.py  user.py
src/configurator/: __init__.py  model.py  utils.py
src/custom/: __init__.py  error_handler.py  state_dispenser.py
src/database/: readme.txt  redis.py  sql.py
src/database/models/: __init__.py  state.py  user.py
src/database/repositories/: __init__.py  state_repository.py  user_repository.py
src/middlewares/: NoBotMiddleware.py  __init__.py
src/rules/: UserRegisteredRule.py  __init__.py
src/runner/: __init__.py  _constants.py  shutdown.py  startup.py  tasks.py
tests/: test_configurator.py  test_middleware.py  test_modules.py  todo.txt
