[tool.poetry]
name = "vk_tg_project_template"
version = "0.0.1"
description = "Project Template for VK / TG Bots"
authors = ["hilorioze <hilorioze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

# Logging
loguru = "^0.6.0"

# Json
orjson = "^3.6.9"

# Database
SQLAlchemy = "^1.4.36"
asyncpg = "^0.26.0"
aioredis = "^2.0.1"

# Tools
choicelib = "^0.1.5"
pydantic = "^1.9.1"
aiomonitor = "^0.4.5"

[tool.poetry.dev-dependencies]
# Tests
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

# Code Quality Tools
black = "^22.3.0"
mypy = "^0.961"
mypy-extensions = "^0.4.3"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"

# Tools
pre-commit = "^2.19.0"
alembic = "^1.8.0"
ipython = "^8.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true

[tool.isort]
line_length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
